# m4b-merge-nvl

./: .gitignore  Brewfile  README.md  m4b-merge.py  pip_requirements.txt  pyproject.toml
docs/: CHANGELOG.md  CODE_ARCHITECTURE.md  DEVELOPMENT.md  FILE_STRUCTURE.md  INSTALL.md  TODO.md  TROUBLESHOOTING.md  USAGE.md
src/m4b_merge/: __main__.py  audible_helper.py  chapter_builder.py  config.py  cover_finder.py  ffmpeg_runner.py  helpers.py  merger.py  runtime_config.py  sidecar_parser.py  silence_detect.py  tagger.py
tests/: conftest.py  test_chapter_builder.py  test_cover_finder.py  test_ffmpeg_runner.py  test_merger.py  test_sidecar_parser.py  test_silence_detect.py  test_tagger.py
