[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m4b-merge"
version = "26.04.0"
description = "Merge a folder of MP3 files into a tagged M4B audiobook using ffmpeg, sox, and mutagen."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
	{ name = "Neil Voss" },
	{ name = "David Dembeck" },
]
keywords = ["audiobook", "m4b", "mp3", "ffmpeg", "mutagen", "audible", "merge"]
classifiers = [
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3.12",
	"Topic :: Multimedia :: Sound/Audio :: Conversion",
	"Intended Audience :: End Users/Desktop",
	"Environment :: Console",
]
dynamic = ["dependencies"]

[project.scripts]
m4b-merge = "m4b_merge.__main__:main"

[project.urls]
Homepage = "https://github.com/djdembeck/m4b-merge"
Issues = "https://github.com/djdembeck/m4b-merge/issues"
Changelog = "https://github.com/djdembeck/m4b-merge/blob/main/docs/CHANGELOG.md"

[tool.setuptools.dynamic]
dependencies = { file = ["pip_requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
